<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- ERROR Strings -->
    <string name="error_requiredField">Required</string>
    <string name="error_mismatchedPasswords">Passwords do not match</string>
    <string name="error_invalidUsername">Username is invalid. (Mobile Number)</string>
    <string name="error_invalidPassword">Password id invalid. (Between 4 to 8 Characters)</string>
    <string name="error_invalidEmailAddress">Email is invalid.</string>
    <string name="error_invalid_credentials">Username/Password Invalid</string>
    <string name="error_invalid_organizationId">Organization ID is invalid</string>
    <string name="error_invalid_contact">No user exists for this number</string>
    

    <!-- MENU String -->
    <string name="menuOption_logout">Logout</string>
    <string name="menuOption_addContact">Add Contact</string>
    <string name="menuOption_settings">Settings</string>
    <string name="menuOption_notifications">Notifications</string>
    <string name="menuOption_home">Home</string>
    <string name="menuOption_invitations">Invitations</string>
    <string name="menuOption_createGroup">Create Group</string>
    <string name="menuOption_viewMap">Map</string>
    <string name="menuOption_terminateGroup">Terminate Group</string>

    <!-- HINT String -->
    <string name="usernameHint">Enter your mobile number</string>
    <string name="passwordHint">Enter a password between 4 and 8 characters long</string>
    <string name="displayNameHint">Name by which others will see you</string>
    <string name="emailHint">Enter your email address</string>
    <string name="contactNameHint">The name you will view the contact by</string>
    <string name="contactNumberHint">The contacts Phone Number (ie. 07712345678)</string>

    <!-- GENERIC Strings -->
    <string name="usernamePrompt">Username:</string>
    <string name="usernameExample">07712345678</string>
    <string name="passwordPrompt">Password:</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="delete">Delete</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="invite">Invite Participants</string>
    <string name="start">Start</string>

    <!-- Strings for LOGIN page -->
    <string name="app_name">GroupSafe</string>
    <string name="action_settings">Settings</string>
    <string name="logoDescription">Group Safe Logo</string>
    <string name="splashMessage">Welcome to GroupSafe!</string>
    <string name="passwordExample">password</string>
    <string name="signin">Sign-in</string>
    <string name="notRegisteredText">Not Registered?</string>

    <!-- Strings for REGISTER page -->
    <string name="registerPageMessage">Fill in the form below to Register:</string>
    <string name="retypePasswordPrompt">Re-type Password:</string>
    <string name="displayNamePrompt">Display Name:</string>
    <string name="emailPrompt">E-Mail Address:</string>
    <string name="passwordExampleRegister">p@55w0rd</string>
    <string name="displayNameExample">Joe Sample</string>
    <string name="emailExample">j.sample@example.co.uk</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Strings for ADD CONTACT page -->
    <string name="addContactPageMessage">Add New Contact:</string>
    <string name="contactNamePrompt">Contact Display Name:</string>
    <string name="contactNumberPrompt">Contact Phone Number:</string>
    <string name="title_activity_add_contact">AddContactActivity</string>

    <!-- Strings for CONTACT ROW -->
    <string name="contact_row_arrow_description">></string>
    <string name="title_activity_contact_details">ContactDetailsActivity</string>

    <!-- Strings for DETAILED CONTACT VIEW page -->
    <string name="detailedContactPageMessage">Detailed Contact Information:</string>
    <string name="detailed_contact_contact_name_prompt">Contact Name:</string>
    <string name="detailed_contact_contact_number_prompt">Contact Number</string>
    <string name="detailed_contact_group_leader_prompt">Contact is a Group Leader?</string>
    <string name="detailed_contact_group_member_prompt">Contact is a Group Member?</string>
    <string name="detailed_contact_contact_name"></string>
    <string name="detailed_contact_contact_number"></string>
    <string name="detailed_contact_group_leader"></string>
    <string name="detailed_contact_group_member"></string>

    <!-- Strings for MAP VIEW page -->
    <string name="title_activity_maps_view">MapsViewActivity</string>
    <string name="map_view_text">Below is a map showing your current location:</string>

    <!-- String for STEP1: SELECT GROUP PARTICIPANTS page -->
    <string name="title_activity_select_group_participants">SelectGroupParticipantsActivity</string>

    <!-- Strings for STEP2: GEO-FENCE RADIUS page -->
    <string name="title_activity_set_group_geo_fence">SetGroupGeoFenceActivity</string>
    <string name="detailed_radius_prompt">Select Geo-Fence Radius(meters): </string>
    <string name="radius_prompt">Radius(m): </string>
    <string name="group_name_prompt">Set Group Name:</string>
    <string name="groupNameHint">Group Name</string>
    <string name="group_organization_prompt">Set Organization: </string>
    <string name="organisation_prompt">Organization ID: </string>

    <string-array name="radius_options">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
    </string-array>

    <string name="title_activity_invite_group_participants">Invite Group Participants</string>
    <string name="hello_world">Hello world!</string>

    <!-- Strings for SETTINGS page -->
    <string name="title_activity_settings">Settings</string>
    <string name="changePassword">Reset Password</string>
    <string name="addEmergencyContact"> Add Emergency Contact</string>
    <string name="userEmailPrompt">Email: </string>
    <string name="organizationPrompt">Organization: </string>
    <string name="editOrganization">Edit Organization</string>
    <string name="deleteOrganization">Delete Organization</string>

    <!-- Strings for ADD EMERGENCY CONTACT page -->
    <string name="title_activity_add_emergency_contact">Add Emergency Contact</string>
    <string name="addEmergencyContactPageMessage">Add New Emergency Contact:</string>
    <string name="emergencyContactNamePrompt">Name: </string>
    <string name="emergencyContactNumberPrompt">Number: </string>
    <string name="contactRelationshipPrompt">Relationship: </string>
    <string name="emergencyContactNameHint">i.e. Jane</string>
    <string name="emergencyContactNumberHint">i.e. 07712345678</string>
    <string name="contactRelationshipHint">i.e. Mother</string>

    <!-- Strings for EMERGENCY CONTACT DETAILS page -->
    <string name="title_activity_emergency_contact_details">Emergency Contact</string>
    <string name="detailedEmergencyContactPageMessage">Emergecy Contact Information:</string>
    <string name="detailedEmergencyContactNamePrompt">Name: </string>
    <string name="detailedEmergencyContactNumberPrompt">Number: </string>
    <string name="detailedEmergencyContactRelationshipPrompt">Relationship: </string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_accept_decline_invitation">AcceptDeclineInvitationActivity</string>
    <string name="title_activity_edit_organization">EditOrganizationActivity</string>

    <!-- Strings for EDIT ORGANIZATION page -->
    <string name="editOrganizationPageMessage">Enter the OrganizationID of the Organization you want to join:</string>
    <string name="organizationIdHint">organizationID</string>
    <string name="organizationIdInfo">You can retrieve this ID from the Organization Administrator</string>

    <!-- Strings for ACCEPT/DECLINE NOTIFICATION page -->
    <string name="notification_title">Notification</string>
    <string name="notification_message">Notififcation Message goes HERE</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="title_activity_group_termination_notification">GroupTerminationNotificationActivity</string>
    <string name="title_activity_group_geo_fence_map">GroupGeoFenceMapActivity</string>

    <!-- Strings for CUSTOM EDIT GEO-FENCE RADIUS dialog -->
    <string name="set_radius">Radius(m)</string>
    <string name="update">Update</string>

    <string-array name="custom_radius_options">
        <item>2</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
        <item>70</item>
        <item>80</item>
        <item>90</item>
        <item>100</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
    </string-array>

    <string name="title_activity_exit_geo_fence_notification">ExitGeoFenceNotificationActivity</string>
    <string name="exit_geo_fence_notification_message">You have left the Geo-Fence. Please re-enter the Geo-Fence</string>
    <string name="exit_geo_fence_notification_title">Exited Geo-Fence</string>
    <string name="title_activity_no_internet_connection">NoInternetConnectionActivity</string>

</resources>