<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_action_home"
        android:orderInCategory="1"
        android:showAsAction="never"
        android:title="@string/menuOption_home"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/menuOption_logout"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/menuOption_settings"/>
    <item
        android:id="@+id/action_addContact"
        android:icon="@drawable/ic_action_add_contact"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/menuOption_addContact"/>
    <item
        android:id="@+id/action_createGroup"
        android:icon="@drawable/ic_action_create_group"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/menuOption_createGroup"/>
    <item
        android:id="@+id/action_viewMap"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/menuOption_viewMap"/>
</menu>