<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:id="@+id/logoWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/logo_bottom_margin"
        android:layout_marginTop="@dimen/logo_margin_top"
        android:gravity="center"
        android:padding="@dimen/logo_padding" >

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:contentDescription="@string/logoDescription"
            android:src="@drawable/group_safe_logo" />
    </LinearLayout>

    <TextView
        android:id="@+id/splashMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoWrapper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/splash_message_margin_top"
        android:gravity="center"
        android:hint="@string/splashMessage"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/usernamePrompt"
        android:layout_width="@dimen/text_prompt_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/splashMessage"
        android:layout_marginLeft="@dimen/text_prompt_margin_left"
        android:layout_marginTop="@dimen/username_prompt_margin_top"
        android:text="@string/usernamePrompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/usernamePrompt"
        android:layout_alignBottom="@+id/usernamePrompt"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/usernamePrompt"
        android:ems="10"
        android:hint="@string/usernameExample"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/passwordPrompt"
        android:layout_width="@dimen/text_prompt_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/usernamePrompt"
        android:layout_marginLeft="@dimen/text_prompt_margin_left"
        android:layout_marginTop="@dimen/password_prompt_margin_top"
        android:text="@string/passwordPrompt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="@dimen/text_input_width"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordPrompt"
        android:layout_alignBottom="@+id/passwordPrompt"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/passwordPrompt"
        android:ems="10"
        android:hint="@string/passwordExample"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/passwordInput"
        android:layout_alignParentRight="true"
        android:layout_below="@id/passwordInput"
        android:layout_marginTop="@dimen/signin_button_magin_top"
        android:onClick="signin"
        android:text="@string/signin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/notRegistered"
        android:layout_width="@dimen/registered_text_width"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signinButton"
        android:layout_marginLeft="@dimen/text_prompt_margin_left"
        android:layout_marginTop="@dimen/registered_text_margin_top"
        android:text="@string/notRegisteredText" />

    <Button
        android:id="@+id/registerNowButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/notRegistered"
        android:layout_alignBottom="@+id/notRegistered"
        android:layout_alignParentRight="true"
        android:onClick="registerNow"
        android:text="@string/register"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>